--- a/src/examples/AoeScanner.SimpleApp/AoeScanner.SimpleApp.csproj
+++ b/src/examples/AoeScanner.SimpleApp/AoeScanner.SimpleApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Aoe.Scaner\Aoe.Scaner.csproj" />
+    <ProjectReference Include="..\..\Aoe.Scanner\Aoe.Scanner.csproj" />
   </ItemGroup>
 
 </Project>
